fix: alignment

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -20,7 +20,7 @@
 
   .facets__form .product-count {
     grid-column-start: 3;
-    align-self: flex-start;
+    /* align-self: flex-start; */
   }
 }
 
